<resources>
    <string name="app_name">GTAuth</string>
    <string name="Name">Nome</string>
    <string name="Apelido">Apelido</string>
    <string name="insert">Insert</string>
    <string name='login_criado'>Conta criada com sucesso</string>
    <string name='login_error'>Algo deu errado, tente novamente</string>
    <string name="DtNasc">Data de Nascimento</string>
    <string name="email">E-Mail</string>
    <string name="password">Senha</string>
    <string name="erro_firebase">Erro ao obter lista</string>
    <string name="deletar_contato">Deletar Contato</string>
    <string name="atualizar_contato">Atualizar Contato</string>
    <string name="contato_removido">Contato Removido</string>
    <string name="contato_adicionado">Contato Adicionado</string>
    <string name="campo_vazio">Por favor, preencha todos os campos</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
